--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -35,3 +35,9 @@ flows:
                 options:
                     command: force:apex:test:run
                     extra: --outputdir ./tests/apex --wait 20 --codecoverage --resultformat json
+    dev_org:
+        steps:
+            5:
+                task: assign_permission_sets
+                options:
+                    api_names: Compliance_User
